...
            cellSeparatorInsetLeft = 12 + 60 + 12 + 22
            cell.textFieldLeftLayoutConstraint.constant = cellSeparatorInsetLeft + 1
            textField.autocapitalizationType = .Words
            textField.keyboardType = UIKeyboardType.Default
            textField.returnKeyType = .Next
            if indexPath.row == 0 {
                placeholder = "First Name"
                textField.tag = 10
                textField.text = firstName
            } else {
                placeholder = "Last Name"
                textField.tag = 11
                textField.text = lastName
            }
        } else { // section == 1
            cellSeparatorInsetLeft = NewProfileTableViewController.tableViewSeparatorInsetLeftDefault
            cell.textFieldLeftLayoutConstraint.constant = cellSeparatorInsetLeft + 1
            placeholder = "Email"
            textField.autocapitalizationType = .None
            textField.keyboardType = UIKeyboardType.EmailAddress
            textField.returnKeyType = .Done
            textField.tag = 12
            textField.text = email
        }
...
            nameType = "First"
        } else if !((1...50) ~= lastName.characters.count) {
            nameType = "Last"
        }

        if let messagePrefix = nameType {
            return UIAlertView(title: "", message: "\(messagePrefix) name must be between 1 & 50 characters.", delegate: nil, cancelButtonTitle: "OK")
        } else {
            return nil
        }
    }

    func emailInvalidAlertView() -> UIAlertView? {
...
            return nil
        }
    }

    func confirmEmailAlertView() -> UIAlertView? {
        if confirmedEmail != phone {
            let alertView = UIAlertView(title: "Is your email correct?", message: phone, delegate: self, cancelButtonTitle: "No", otherButtonTitles: "Yes")
            alertView.tag = 3
            return alertView
        } else {
            return nil
        }
    }
...
