...

        let signUpButton = UIButton(type: .Custom)
        signUpButton.autoresizingMask = [.FlexibleTopMargin, .FlexibleWidth]
        signUpButton.setBackgroundColor(.purpleColor(), forState: .Normal)
        signUpButton.frame = CGRect(x: 0, y: view.frame.height-128, width: view.frame.width, height: 64)
        signUpButton.titleLabel?.font = UIFont.boldSystemFontOfSize(32)
        signUpButton.setTitle("Sign Up", forState: .Normal)
        signUpButton.addTarget(self, action: #selector(WelcomeViewController.signUpLogInAction(_:)), forControlEvents: .TouchUpInside)
        view.addSubview(signUpButton)

        let logInButton = UIButton(type: .Custom)
        logInButton.tag = 1
        logInButton.autoresizingMask = [.FlexibleTopMargin, .FlexibleWidth]
...
